# Customer-churn-prediction

./: .gitignore  README.md  dvc.yaml  project_structure.txt  pyproject.toml  requirements.txt  setup.py
.devcontainer/: devcontainer.json
.dvc/: config
app/: main.py
app/pages/: 1_⏱️ _batch_prediction.py  page_1.py
artifacts/model/: .gitignore
data/: fe_test.csv  fe_train.csv  test_sample.csv
data/raw/: .gitignore
docs/: buisness overview.md
model_results/: results.csv  results_io.py
models/: baseline_model.pkl  final_model.pkl  gb_model.pkl  rf_model.pkl
notebooks/: 01_EDA.ipynb  02_baseline_model.ipynb  02_feature_engineering.ipynb  03_baseline_model.ipynb  03_feature_engineering.ipynb  04_model_experiment_evaluation.ipynb  05_final_model.ipynb
src/: __init__.py  feature_engineering.py
src/components/: 01_data_ingestion.py  02_data_transformation.py  02_feature_engineering.py  02_preprocessing.py  feature_engineering.py  metrics.py  module_01_data_ingestion.py  module_02_feature_engineering.py  module_03_data_transformation.py  module_04_training_model.py  module_05_model_evalution.py  training_model.py
src/config/: config_yaml.yaml
src/exception/: __init__.py
src/logger/: __init__.py
src/utils/: main_utils.py  mlflow_utils.py
user interface/: main.py
