[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "churn"
version = "0.0.1"
description = "Churn Prediction ML Project"
authors = [{name = "Rajguru Bhosale", email = "bhosalerajguru007@gmail.com"}]

[tool.setuptools]
packages = {find = {}}

[tool.setuptools.dynamic]
dependencies = {file = "requirements.txt"}